--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
+<html lang="en"><head>
     <meta charset="UTF-8">
     <title>Carved Rock Fitness</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet">
@@ -203,6 +202,9 @@
 
 <script src="./utils.js"></script>
 <script src="./home.js"></script>
-
+<script>
+  
+</script>
 </body>
+
 </html>
